# google_gemini_hackathon_2025-09-06

./: README.md  add_to_zshrc.sh  g  l  pyproject.toml
src/: __init__.py  command_logger.py  gemini_client.py  hotkey_listener.py  learning.py  learning_integration.py  main.py  quiz.py  shell_integration.py  terminal_interface.py
