[project]
name = "gemini-command-helper"
version = "0.1.0"
description = "AI-powered command line helper using Google Gemini CLI"
authors = [
    {name = "David", email = "dwpickei@gmail.com"}
]
dependencies = [
    "pynput>=1.7.6",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]
requires-python = ">=3.10"

[project.scripts]
gemini-helper = "src.main:main"
gemini-complete = "src.shell_integration:main"
gemini-learn = "src.learning_integration:main"
gemini-quiz = "src.quiz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
